<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/description_img_about"
        android:background="@drawable/ic_account_circle_black_24dp"
        android:src="@drawable/my_photo"
        android:layout_marginBottom="30dp" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textSize="20sp"
        android:textColor="@color/warna_text_about"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="@dimen/ukuran_font_about"
        android:drawablePadding="@dimen/drawable_padding"
        android:textColor="@color/warna_text_about"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_telp"
        android:textSize="@dimen/ukuran_font_about"
        android:textColor="@color/warna_text_about"
        android:drawableStart="@drawable/ic_call_black_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:id="@+id/myphone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/ukuran_font_about"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:textColor="#DB2222"
        android:id="@+id/email"/>
</LinearLayout>